force-app/main/default/objects/BlueWave_Surveys__c/BlueWave_Surveys__c.object-meta.xml
<CustomObject>
    <label>BlueWave Survey</label>
    <nameField>
        <label>BlueWave Survey Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BlueWave Surveys</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>