force-app/main/default/objects/BlueWave_Surveys__c/fields/Biggest_motivator_for_CS_signup__c.field-meta.xml
<CustomField>
    <fullName>Biggest_motivator_for_CS_signup__c</fullName>
    <label>Biggest motivator for CS signup</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Monthly energy savings</fullName>
                
                
                    <label>Monthly energy savings</label>
                
                </value>
            
                <value>
                
                    <fullName>Environmental benefit of supporting solar</fullName>
                
                
                    <label>Environmental benefit of supporting solar</label>
                
                </value>
            
                <value>
                
                    <fullName>Going completely solar by adding community solar to a rooftop installation</fullName>
                
                
                    <label>Going completely solar by adding community solar to a rooftop installation</label>
                
                </value>
            
                <value>
                
                    <fullName>A family/friend recommended community solar or BlueWave</fullName>
                
                
                    <label>A family/friend recommended community solar or BlueWave</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>