force-app/main/default/objects/BlueWave_Surveys__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>BlueWave Surveys</relationshipLabel>
    <relationshipName>BlueWave_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>