force-app/main/default/objects/BlueWave_Surveys__c/fields/Case_Owner_Email__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Email__c</fullName>
    <formula>Case__r.Owner:User.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Owner Email Formula</label>
    <type>Text</type>
</CustomField>