force-app/main/default/objects/BlueWave_Surveys__c/fields/Case_Owner_Emaill__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Emaill__c</fullName>
    <description>Updated via workflow for 5 star case notification</description>
    <inlineHelpText>Updated via workflow for 5 star case notification</inlineHelpText>
    <label>Case Owner Email</label>
    <type>Email</type>
</CustomField>