force-app/main/default/objects/BlueWave_Surveys__c/fields/Case_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Case_Satisfaction__c</fullName>
    <inlineHelpText>From GetFeedback</inlineHelpText>
    <label>Case Satisfaction</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>