force-app/main/default/objects/BlueWave_Surveys__c/fields/Comment_Box__c.field-meta.xml
<CustomField>
    <fullName>Comment_Box__c</fullName>
    <label>Comment Box</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>