force-app/main/default/objects/BlueWave_Surveys__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>BlueWave Surveys</relationshipLabel>
    <relationshipName>BlueWave_Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>