force-app/main/default/objects/BlueWave_Surveys__c/fields/Contact_Info__c.field-meta.xml
<CustomField>
    <fullName>Contact_Info__c</fullName>
    <inlineHelpText>Would you like to provide additional feedback as we develop the portal further? If so, please tell us the best way to contact you.</inlineHelpText>
    <label>Contact Info</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>