force-app/main/default/objects/BlueWave_Surveys__c/fields/CS_Biz_Benefits__c.field-meta.xml
<CustomField>
    <fullName>CS_Biz_Benefits__c</fullName>
    <label>CS Biz Benefits</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Ability to sell to the small business community</fullName>
                
                
                    <label>Ability to sell to the small business community</label>
                
                </value>
            
                <value>
                
                    <fullName>Differentiation from competing installers</fullName>
                
                
                    <label>Differentiation from competing installers</label>
                
                </value>
            
                <value>
                
                    <fullName>Providing an option to customers unable to install rooftop systems</fullName>
                
                
                    <label>Providing an option to customers unable to install rooftop systems</label>
                
                </value>
            
                <value>
                
                    <fullName>Topping off rooftop customers with Community Solar</fullName>
                
                
                    <label>Topping off rooftop customers with Community Solar</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>