force-app/main/default/objects/BlueWave_Surveys__c/fields/CS_Sales_y_n__c.field-meta.xml
<CustomField>
    <fullName>CS_Sales_y_n__c</fullName>
    <label>CS Sales yn</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>