force-app/main/default/objects/BlueWave_Surveys__c/fields/Cust_Top_3__c.field-meta.xml
<CustomField>
    <fullName>Cust_Top_3__c</fullName>
    <label>Cust Top 3</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affordable monthly payments</fullName>
            </value>
            <value>
                <fullName>The interest rate of the loan</fullName>
            </value>
            <value>
                <fullName>Total cost of ownership</fullName>
            </value>
            <value>
                <fullName>Knowing BlueWave&apos;s name as a financing provider</fullName>
            </value>
            <value>
                <fullName>Energy security</fullName>
            </value>
            <value>
                <fullName>Improved environmental impact</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Purchasing products that help you save money and optimize your energy use</fullName>
            </value>
            <value>
                <fullName>Reviewing your energy usage or savings online</fullName>
            </value>
            <value>
                <fullName>Purchasing energy from alternative energy sources apart from community solar</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>