force-app/main/default/objects/BlueWave_Surveys__c/fields/Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience__c</fullName>
    <description>Field to capture ranking of customer experience</description>
    <label>Customer Experience</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>