force-app/main/default/objects/BlueWave_Surveys__c/fields/Customer_ranking__c.field-meta.xml
<CustomField>
    <fullName>Customer_ranking__c</fullName>
    <description>Please rank the features below in order of importance to your customers (based on what they tell you).</description>
    <label>Customer ranking</label>
    <type>TextArea</type>
</CustomField>