force-app/main/default/objects/BlueWave_Surveys__c/fields/Date_Created__c.field-meta.xml
<CustomField>
    <fullName>Date_Created__c</fullName>
    <label>Date Created</label>
    <length>90</length>
    <type>Text</type>
</CustomField>