force-app/main/default/objects/BlueWave_Surveys__c/fields/EE_Q10__c.field-meta.xml
<CustomField>
    <fullName>EE_Q10__c</fullName>
    <inlineHelpText>10. My coworkers are committed to doing quality work.</inlineHelpText>
    <label>EE_Q10</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>