force-app/main/default/objects/BlueWave_Surveys__c/fields/EE_Q11__c.field-meta.xml
<CustomField>
    <fullName>EE_Q11__c</fullName>
    <inlineHelpText>11. I have a best friend at work.</inlineHelpText>
    <label>EE_Q11</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>