force-app/main/default/objects/BlueWave_Surveys__c/fields/EE_Q12__c.field-meta.xml
<CustomField>
    <fullName>EE_Q12__c</fullName>
    <inlineHelpText>12. In the last six months, someone at work has talked to me about my progress.</inlineHelpText>
    <label>EE_Q12</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>