force-app/main/default/objects/BlueWave_Surveys__c/fields/Engaged_Employee__c.field-meta.xml
<CustomField>
    <fullName>Engaged_Employee__c</fullName>
    <formula>IF(Engagement_Score__c&gt;3.99, &quot;Engaged&quot;,
 IF(Engagement_Score__c&lt;3, &quot;Not Engaged&quot;,&quot;Neutral&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engaged Employee?</label>
    <type>Text</type>
</CustomField>