force-app/main/default/objects/BlueWave_Surveys__c/fields/Engagement_Score__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Score__c</fullName>
    <description>Weighted Average of responses</description>
    <formula>(0.0769* EE_Q1__c)+(0.0769* EE_Q2__c)+(0.0769* EE_Q3__c)+(0.0769* EE_Q4__c)+(0.0769* EE_Q5__c)+(0.0769* EE_Q6__c)+(0.0769* EE_Q7__c)+(0.0769* EE_Q8__c)+(0.0769* EE_Q9__c)+(0.0769* EE_Q10__c)+(0.0769* EE_Q11__c)+(0.0769* EE_Q12__c)+(0.0769* EE_Q13__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engagement Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>