force-app/main/default/objects/BlueWave_Surveys__c/fields/Features_for_easier_sell__c.field-meta.xml
<CustomField>
    <fullName>Features_for_easier_sell__c</fullName>
    <label>Features for easier sell?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>