force-app/main/default/objects/BlueWave_Surveys__c/fields/Feedback_Email__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Email__c</fullName>
    <description>Yes I want to provide feedback</description>
    <label>Feedback Email</label>
    <type>Email</type>
</CustomField>