force-app/main/default/objects/BlueWave_Surveys__c/fields/First_Deal_gear_selection__c.field-meta.xml
<CustomField>
    <fullName>First_Deal_gear_selection__c</fullName>
    <description>First Deal gear selection</description>
    <label>First Deal Gear Selection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Swell</fullName>
            </value>
            <value>
                <fullName>Yeti</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>