force-app/main/default/objects/BlueWave_Surveys__c/fields/How_was_customer_acquired__c.field-meta.xml
<CustomField>
    <fullName>How_was_customer_acquired__c</fullName>
    <label>How was customer acquired?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>