force-app/main/default/objects/BlueWave_Surveys__c/fields/How_you_heard_about_BW__c.field-meta.xml
<CustomField>
    <fullName>How_you_heard_about_BW__c</fullName>
    <label>How you heard about BW</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>I met the BlueWave team at a trade show or community event</fullName>
                
                
                    <label>I met the BlueWave team at a trade show or community event</label>
                
                </value>
            
                <value>
                
                    <fullName>Another solar installer mentioned BlueWave</fullName>
                
                
                    <label>Another solar installer mentioned BlueWave</label>
                
                </value>
            
                <value>
                
                    <fullName>A customer mentioned hearing about BlueWave loans</fullName>
                
                
                    <label>A customer mentioned hearing about BlueWave loans</label>
                
                </value>
            
                <value>
                
                    <fullName>Someone from BlueWave reached out to me directly</fullName>
                
                
                    <label>Someone from BlueWave reached out to me directly</label>
                
                </value>
            
                <value>
                
                    <fullName>I saw BlueWave advertising and followed up</fullName>
                
                
                    <label>I saw BlueWave advertising and followed up</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>