force-app/main/default/objects/BlueWave_Surveys__c/fields/Impact_on_Project_Management__c.field-meta.xml
<CustomField>
    <fullName>Impact_on_Project_Management__c</fullName>
    <label>Impact on Project Management</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>