force-app/main/default/objects/BlueWave_Surveys__c/fields/Interest_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Interest_Name_1__c</fullName>
    <label>Interest Name 1</label>
    <type>TextArea</type>
</CustomField>