force-app/main/default/objects/BlueWave_Surveys__c/fields/Interest_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Interest_Name_2__c</fullName>
    <label>Interest Name 2</label>
    <type>TextArea</type>
</CustomField>