force-app/main/default/objects/BlueWave_Surveys__c/fields/Interest_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Interest_Name_3__c</fullName>
    <label>Interest Name 3</label>
    <type>TextArea</type>
</CustomField>