force-app/main/default/objects/BlueWave_Surveys__c/fields/Learning_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Learning_Outcomes__c</fullName>
    <label>Learning Outcomes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>