force-app/main/default/objects/BlueWave_Surveys__c/fields/Messaging_approach__c.field-meta.xml
<CustomField>
    <fullName>Messaging_approach__c</fullName>
    <label>Messaging approach?</label>
    <type>TextArea</type>
</CustomField>