force-app/main/default/objects/BlueWave_Surveys__c/fields/Name_PM__c.field-meta.xml
<CustomField>
    <fullName>Name_PM__c</fullName>
    <label>Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>