force-app/main/default/objects/BlueWave_Surveys__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <inlineHelpText>How likely are you to recommend Perch to colleagues in the solar industry? (1 to 10 1 is highly unlikely)</inlineHelpText>
    <label>NPS</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>