force-app/main/default/objects/BlueWave_Surveys__c/fields/NPS_Comp_Value__c.field-meta.xml
<CustomField>
    <fullName>NPS_Comp_Value__c</fullName>
    <description>This field is used for reporting NPS scores. It is as follows (Detractor = -1, Passive = 0, Promoter = 1)</description>
    <formula>IF( NPS__c &gt; 8, 1,
    IF(NPS__c &lt; 7, -1, 0)
)</formula>
    <inlineHelpText>This field is used for reporting NPS scores. It is as follows (Detractor = -1, Passive = 0, Promoter = 1)</inlineHelpText>
    <label>NPS Comp Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>