force-app/main/default/objects/BlueWave_Surveys__c/fields/NPS_Type__c.field-meta.xml
<CustomField>
    <fullName>NPS_Type__c</fullName>
    <label>NPS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Partner</fullName>
            </value>
            <value>
                <fullName>PM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>