force-app/main/default/objects/BlueWave_Surveys__c/fields/Open_feedback__c.field-meta.xml
<CustomField>
    <fullName>Open_feedback__c</fullName>
    <description>Partner open-ended feedback</description>
    <label>Open feedback</label>
    <type>TextArea</type>
</CustomField>