force-app/main/default/objects/BlueWave_Surveys__c/fields/Partner_ship_address_1__c.field-meta.xml
<CustomField>
    <fullName>Partner_ship_address_1__c</fullName>
    <label>Partner ship address 1</label>
    <type>TextArea</type>
</CustomField>