force-app/main/default/objects/BlueWave_Surveys__c/fields/Partner_ship_address_city__c.field-meta.xml
<CustomField>
    <fullName>Partner_ship_address_city__c</fullName>
    <label>Partner ship address city</label>
    <type>TextArea</type>
</CustomField>