force-app/main/default/objects/BlueWave_Surveys__c/fields/Partner_ship_address_zip__c.field-meta.xml
<CustomField>
    <fullName>Partner_ship_address_zip__c</fullName>
    <label>Partner ship address zip</label>
    <length>25</length>
    <type>Text</type>
</CustomField>