force-app/main/default/objects/BlueWave_Surveys__c/fields/Partner_Spotlight__c.field-meta.xml
<CustomField>
    <fullName>Partner_Spotlight__c</fullName>
    <label>Partner Spotlight</label>
    <type>TextArea</type>
</CustomField>