force-app/main/default/objects/BlueWave_Surveys__c/fields/PF_Q1__c.field-meta.xml
<CustomField>
    <fullName>PF_Q1__c</fullName>
    <inlineHelpText>How would you rate the overall partner experience with Perch?</inlineHelpText>
    <label>PFQ1 Overall Experience</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>