force-app/main/default/objects/BlueWave_Surveys__c/fields/PF_Q2__c.field-meta.xml
<CustomField>
    <fullName>PF_Q2__c</fullName>
    <inlineHelpText>How clear are the next steps for each loan application?</inlineHelpText>
    <label>PFQ2 Clear Next Steps</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>