force-app/main/default/objects/BlueWave_Surveys__c/fields/PF_Q3__c.field-meta.xml
<CustomField>
    <fullName>PF_Q3__c</fullName>
    <inlineHelpText>How likely would you be to recommend BlueWave to a peer in the Solar Business?</inlineHelpText>
    <label>PFQ3 Likely to Recommend</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>