force-app/main/default/objects/BlueWave_Surveys__c/fields/Portal_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Portal_Name_1__c</fullName>
    <description>First choice</description>
    <label>Portal Name 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>