force-app/main/default/objects/BlueWave_Surveys__c/fields/Portal_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Portal_Name_2__c</fullName>
    <label>Portal Name 2</label>
    <type>TextArea</type>
</CustomField>