force-app/main/default/objects/BlueWave_Surveys__c/fields/Portal_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Portal_Name_3__c</fullName>
    <label>Portal Name 3</label>
    <type>TextArea</type>
</CustomField>