force-app/main/default/objects/BlueWave_Surveys__c/fields/Rank_Co_s_Portal_Simplicity__c.field-meta.xml
<CustomField>
    <fullName>Rank_Co_s_Portal_Simplicity__c</fullName>
    <label>Rank Co&apos;s Portal Simplicity</label>
    <type>TextArea</type>
</CustomField>