force-app/main/default/objects/BlueWave_Surveys__c/fields/Rank_Co_s_Underwriting__c.field-meta.xml
<CustomField>
    <fullName>Rank_Co_s_Underwriting__c</fullName>
    <label>Rank Co&apos;s Underwriting</label>
    <type>TextArea</type>
</CustomField>