force-app/main/default/objects/BlueWave_Surveys__c/fields/Rank_customer_opinion__c.field-meta.xml
<CustomField>
    <fullName>Rank_customer_opinion__c</fullName>
    <description>Rank features in customer opinion</description>
    <label>Rank customer opinion</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>