force-app/main/default/objects/BlueWave_Surveys__c/fields/Rank_features_for_exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Rank_features_for_exclusivity__c</fullName>
    <description>Rank features for exclusivity</description>
    <label>Rank features for exclusivity</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>