force-app/main/default/objects/BlueWave_Surveys__c/fields/Rate_dashboard__c.field-meta.xml
<CustomField>
    <fullName>Rate_dashboard__c</fullName>
    <description>Rate portal feature - dashboard</description>
    <label>Rate feature - dashboard</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>