force-app/main/default/objects/BlueWave_Surveys__c/fields/Rate_feature__c.field-meta.xml
<CustomField>
    <fullName>Rate_feature__c</fullName>
    <description>Capture rate/ranks from surveys</description>
    <label>Rate feature</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>