force-app/main/default/objects/BlueWave_Surveys__c/fields/Rate_feature_email_application__c.field-meta.xml
<CustomField>
    <fullName>Rate_feature_email_application__c</fullName>
    <description>Rate portal feature - Emailing application forms to customers to complete</description>
    <label>Rate feature - email application</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>