force-app/main/default/objects/BlueWave_Surveys__c/fields/Rate_feature_submit_system_info__c.field-meta.xml
<CustomField>
    <fullName>Rate_feature_submit_system_info__c</fullName>
    <description>Rate feature - submit system info</description>
    <label>Rate feature - submit system info</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>