force-app/main/default/objects/BlueWave_Surveys__c/fields/Rate_partner_support__c.field-meta.xml
<CustomField>
    <fullName>Rate_partner_support__c</fullName>
    <description>Rate feature - partner support</description>
    <label>Rate feature - partner support</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>