force-app/main/default/objects/BlueWave_Surveys__c/fields/Reasons_customer_signed_up_for_CS__c.field-meta.xml
<CustomField>
    <fullName>Reasons_customer_signed_up_for_CS__c</fullName>
    <label>Reasons customer signed up for CS</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>