force-app/main/default/objects/BlueWave_Surveys__c/fields/State_s_in_which_you_partner_with_BW__c.field-meta.xml
<CustomField>
    <fullName>State_s_in_which_you_partner_with_BW__c</fullName>
    <description>Florida
Massachusetts
Rhode Island
North Carolina
South Carolina
New York</description>
    <label>State(s) in which you partner with BW</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Massachusetts - Mass Solar Loan</fullName>
                
                
                    <label>Massachusetts - Mass Solar Loan</label>
                
                </value>
            
                <value>
                
                    <fullName>Massachusetts - BlueWave Home Solar Loan</fullName>
                
                
                    <label>Massachusetts - BlueWave Home Solar Loan</label>
                
                </value>
            
                <value>
                
                    <fullName>North Carolina</fullName>
                
                
                    <label>North Carolina</label>
                
                </value>
            
                <value>
                
                    <fullName>South Carolina</fullName>
                
                
                    <label>South Carolina</label>
                
                </value>
            
                <value>
                
                    <fullName>Rhode Island</fullName>
                
                
                    <label>Rhode Island</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>