force-app/main/default/objects/BlueWave_Surveys__c/fields/Suggested_Changes__c.field-meta.xml
<CustomField>
    <fullName>Suggested_Changes__c</fullName>
    <inlineHelpText>What changes would Perch have to make for you to give it an even higher rating?</inlineHelpText>
    <label>Suggested Changes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>