force-app/main/default/objects/BlueWave_Surveys__c/fields/Support_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Support_Name_1__c</fullName>
    <label>Support Name 1</label>
    <type>TextArea</type>
</CustomField>