force-app/main/default/objects/BlueWave_Surveys__c/fields/Support_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Support_Name_2__c</fullName>
    <label>Support Name 2</label>
    <type>TextArea</type>
</CustomField>