force-app/main/default/objects/BlueWave_Surveys__c/fields/Support_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Support_Name_3__c</fullName>
    <label>Support Name 3</label>
    <type>TextArea</type>
</CustomField>