force-app/main/default/objects/BlueWave_Surveys__c/fields/Survey_Group__c.field-meta.xml
<CustomField>
    <fullName>Survey_Group__c</fullName>
    <label>Survey Group</label>
    <length>20</length>
    <type>Text</type>
</CustomField>