force-app/main/default/objects/BlueWave_Surveys__c/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team</label>
    <length>70</length>
    <type>Text</type>
</CustomField>