force-app/main/default/objects/BlueWave_Surveys__c/fields/Text_Question_1__c.field-meta.xml
<CustomField>
    <fullName>Text_Question_1__c</fullName>
    <label>Text Question 1</label>
    <type>TextArea</type>
</CustomField>