force-app/main/default/objects/BlueWave_Surveys__c/fields/Text_Question_2__c.field-meta.xml
<CustomField>
    <fullName>Text_Question_2__c</fullName>
    <label>Text Question 2</label>
    <type>TextArea</type>
</CustomField>