force-app/main/default/objects/BlueWave_Surveys__c/fields/Text_Question_3__c.field-meta.xml
<CustomField>
    <fullName>Text_Question_3__c</fullName>
    <label>Text Question 3</label>
    <type>TextArea</type>
</CustomField>