force-app/main/default/objects/BlueWave_Surveys__c/fields/Time_Name_1__c.field-meta.xml
<CustomField>
    <fullName>Time_Name_1__c</fullName>
    <label>Time Name 1</label>
    <type>TextArea</type>
</CustomField>