force-app/main/default/objects/BlueWave_Surveys__c/fields/Time_Name_2__c.field-meta.xml
<CustomField>
    <fullName>Time_Name_2__c</fullName>
    <label>Time Name 2</label>
    <type>TextArea</type>
</CustomField>