force-app/main/default/objects/BlueWave_Surveys__c/fields/Time_Name_3__c.field-meta.xml
<CustomField>
    <fullName>Time_Name_3__c</fullName>
    <label>Time Name 3</label>
    <type>TextArea</type>
</CustomField>