force-app/main/default/objects/BlueWave_Surveys__c/fields/Top_3_fin_selection__c.field-meta.xml
<CustomField>
    <fullName>Top_3_fin_selection__c</fullName>
    <label>Top 3 fin selection</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Interest rate</fullName>
                
                
                    <label>Interest rate</label>
                
                </value>
            
                <value>
                
                    <fullName>Availability of multiple loan types</fullName>
                
                
                    <label>Availability of multiple loan types</label>
                
                </value>
            
                <value>
                
                    <fullName>Application processing time</fullName>
                
                
                    <label>Application processing time</label>
                
                </value>
            
                <value>
                
                    <fullName>Online portal functionality</fullName>
                
                
                    <label>Online portal functionality</label>
                
                </value>
            
                <value>
                
                    <fullName>Partner support &amp; training</fullName>
                
                
                    <label>Partner support &amp; training</label>
                
                </value>
            
                <value>
                
                    <fullName>Requirements on homeowner FICO score / creditworthiness</fullName>
                
                
                    <label>Requirements on homeowner FICO score / creditworthiness</label>
                
                </value>
            
                <value>
                
                    <fullName>Monthly payment calculation for customers</fullName>
                
                
                    <label>Monthly payment calculation for customers</label>
                
                </value>
            
                <value>
                
                    <fullName>Other</fullName>
                
                
                    <label>Other</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>