force-app/main/default/objects/BlueWave_Surveys__c/fields/Transformer_Nomination__c.field-meta.xml
<CustomField>
    <fullName>Transformer_Nomination__c</fullName>
    <inlineHelpText>Perch is instituting a new employee transformer award that will recognize a employee that has implemented profound and radical change across the organization in 2016. More specifically, we are looking for &quot;the&quot; individual that has helped revolutionize</inlineHelpText>
    <label>Transformer Nomination</label>
    <length>20</length>
    <type>Text</type>
</CustomField>