force-app/main/default/objects/BlueWave_Surveys__c/fields/Visa_raffle_email__c.field-meta.xml
<CustomField>
    <fullName>Visa_raffle_email__c</fullName>
    <label>Visa raffle email</label>
    <type>Email</type>
</CustomField>