force-app/main/default/objects/BlueWave_Surveys__c/fields/Wh__c.field-meta.xml
<CustomField>
    <fullName>Wh__c</fullName>
    <label>Other customer messaging info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>