force-app/main/default/objects/BlueWave_Surveys__c/fields/What_can_we_do_better_than_comp__c.field-meta.xml
<CustomField>
    <fullName>What_can_we_do_better_than_comp__c</fullName>
    <label>What can we do better than comp?</label>
    <type>TextArea</type>
</CustomField>