force-app/main/default/objects/BlueWave_Surveys__c/fields/What_options_did_you_present_to_customer__c.field-meta.xml
<CustomField>
    <fullName>What_options_did_you_present_to_customer__c</fullName>
    <label>What options did you present to customer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>